content not yet uploaded

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <!-- Import your CSS file -->
+ 
  <style>
-  /* Assuming you have a class named "header" defined in your CSS */
+  
 .header {
     background-color: transparent; /* Make the background transparent */
     padding: 20px;
@@ -19,7 +19,7 @@
     z-index: 1; /* Make the header appear on top of other elements */
   }
   
-  /* Center the content inside the header */
+  
   .header nav {
     display: flex;
     align-items: center; /* Center the navigation links vertically */
@@ -381,6 +381,26 @@
     color: inherit; /* Inherit the text color from the parent */
     text-decoration: none; /* Remove underline */
   }
+
+  /* Small screens (phones) */
+@media (max-width: 768px) {
+  
+  .header {
+    padding: 10px;
+  }
+
+ 
+}
+ 
+@media (min-width: 769px) and (max-width: 1024px) {
+  /* Adjust styles for medium screens here */
+}
+
+ 
+@media (min-width: 1025px) {
+   
+}
+
  </style>
  <title>einstein-john</title>
 </head>
